--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,18 +5,28 @@ server.port=8085
 spring.datasource.url=jdbc:mysql://localhost:3306/gestion_hopitaux?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#server.servlet.context-path=/api
-#
-## OpenAPI
-#springdoc.api-docs.path=/api-docs
-#springdoc.swagger-ui.path=/swagger-ui.html
-#
-## JWT
-#app.jwtSecret=SecretKeyToGenJWTsForHospitalManagementSystem
-#app.jwtExpirationMs=86400000
+
+# Configuration stockage fichiers
+file.upload-dir=C:/xampp/htdocs/uploads
+file.access-url=http://localhost/uploads
+
+# Taille max des fichiers
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Optimisation pour les requêtes de fichiers
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.batch.versioned_data=true
+
+# Optimisation des requêtes JPA
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
+spring.jpa.properties.hibernate.default_batch_fetch_size=20
+ Database Configuration
