--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gestion_hopitaux?createDatabas
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
@@ -29,4 +30,4 @@ spring.jpa.properties.hibernate.batch.versioned_data=true
 # Optimisation des requêtes JPA
 spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
 spring.jpa.properties.hibernate.default_batch_fetch_size=20
- Database Configuration
+ #Database Configuration
